<resources>
    <string name="app_name">Pandora</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="forget">Quên mật khẩu</string>
    <string name="show_password">Hiện mật khẩu</string>
    <string name="numberphone">Nhập số điện thoại</string>
    <string name="joinPandora">Tham gia Pandora</string>
    <string name="description">Hãy tạo tài khoản để biết thêm những địa điểm ăn uống và ẩm thực đa dạng</string>
    <string name="acp">Nhập mã xác thực chúng tôi vừa gửi đến bạn</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_profile">Cá nhân</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="Open" translatable="false">ahihi\n</string>
    <string name="Close" translatable="false">ahuhu\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="searchHint">Bạn muốn tìm gì?</string>
    <string name="search">Tìm kiếm...</string>
    <string name="viewUserList">Xem danh sách User</string>
    <string name="viewTypesOfRestaurants">Xem danh sách loại quán ăn</string>
    <string name="viewListRestaurant">Xem danh sách quán ăn</string>
    <string name="viewListOfReviewsAndComments">Xem danh sách đánh giá, bình luận</string>
    <string name="submit">Xác nhận</string>
    <string name="enterVerificationCode">Nhập mã xác nhận</string>
    <string name="changePassword">Đổi mật khẩu</string>
    <string name="inputPassword">Nhập mật khẩu</string>
    <string name="inputPasswordAgain">Nhập lại mật khẩu</string>
    <string name="register">Đăng Ký</string>
    <string name="inputUsername">Nhập tên đăng nhập</string>
    <string name="seen">Đã xem</string>
    <string name="typeRestaurant">Loại quán ăn</string>
    <string name="location">Các địa điểm</string>
    <string name="inputAccount">Thêm tài khoản</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="inputRestaurant">Thêm quán ăn</string>
    <string name="inputRestaurantName">Nhập tên quán ăn</string>
    <string name="inputDetails">Nhập mô tả</string>
    <string name="chooseImage">Chọn ảnh</string>
    <string name="nothingThere">Không có ảnh</string>
    <string name="inputTypeRestaurant">Thêm loại quán ăn/địa điểm</string>
    <string name="deleteAccount">Xóa tài khoản</string>
    <string name="wantDelete">Muốn xóa thật à ?</string>
    <string name="yesWantDelete">Muốn xóa</string>
    <string name="delete">Xóa</string>
    <string name="editAccount">Chỉnh sửa tài khoản</string>
    <string name="userManagement">Quản lý user</string>
    <string name="typeRestaurantManagement">Quản lý danh mục quán ăn</string>
    <string name="restaurantManagement">Quản lý quán ăn</string>
    <string name="ReviewManagement">Quản lý các đánh giá, bình luận</string>
    <string name="changeInfomation">Thay đổi thông tin</string>
    <string name="namePerson">Tên người dùng</string>
    <string name="number">Số điện thoại</string>
    <string name="language">Ngôn ngữ</string>
    <string name="policy">Chính sách</string>
    <string name="agree">Đồng ý</string>
    <string name="editRestaurant">Chỉnh sửa quán ăn</string>
    <string name="nameRestaurant">Tên quán ăn</string>
    <string name="adress">Địa chỉ</string>
    <string name="des">Mô tả</string>
    <string name="deleteRestaurant">Xóa quán ăn</string>
    <string name="deleteCommend">Xóa bình luận</string>
    <string name="editTypeRestaurant">Chỉnh sửa danh mục</string>
    <string name="typeRestaurantName">Tên danh mục</string>
    <string name="deleteTypeRestaurant">Xóa danh mục</string>
    <string name="needSignIn">Bạn cần đăng nhập để sử dụng tính năng này.</string>
    <string name="chooseLocation">Chọn địa điểm</string>
    <string name="notification">Thông báo</string>
    <string name="inputCommend">Viết bình luận</string>
    <string name="send">Gửi</string>
    <string name="rateHighToLow">Đánh giá cao đến thấp</string>
    <string name="signIn">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="administrator">Quyền Admin</string>
    <string name="registerForNewAccount">Đăng kí cho tài khoản mới</string>
    <string name="start">Bắt đầu</string>
    <string name="hadAccount">Tôi đã có tài khoản rồi</string>
    <string name="favourite">Quán ăn yêu thích</string>
    <string name="darkMode">Chế độ tối</string>
</resources>