<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/iconAlert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/baseline_warning_24"
        android:layout_gravity="center"
        android:contentDescription="Icon Alert"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/titleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/deleteAccount"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/messageAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wantDelete"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginVertical="15dp"/>

    <CheckBox
        android:id="@+id/checkDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:minHeight="48dp"
        android:text="@string/yesWantDelete"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
