<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:gravity="center_horizontal">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/titleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeInfomation"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <!-- Nội dung -->
    <TextView
        android:id="@+id/messageAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/needSignIn"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginVertical="15dp" />

    <!-- Nút hành động -->
    <Button
        android:id="@+id/btnPositive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
