<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pandora_background"

    tools:context=".ForgetPassword.ChangePassword">

    <View
        android:id="@+id/view"
        android:layout_width="475dp"
        android:layout_height="475dp"
        android:alpha="0.5"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/changePassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edMK"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_edit"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/inputPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/material_dynamic_neutral40"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edMK2"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_edit"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/inputPasswordAgain"
            android:minHeight="48dp"
            android:textColorHint="@color/material_dynamic_neutral40"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>