<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/dialog_background"
    android:gravity="center_horizontal">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/titleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editRestaurant"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <!-- Tên quán ăn -->
    <EditText
        android:id="@+id/updateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:background="@drawable/rounded_edit"
        android:hint="@string/nameRestaurant"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral40" />

    <EditText
        android:id="@+id/updateAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:background="@drawable/rounded_edit"
        android:hint="@string/adress"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral40" />

    <!-- Thành phố -->
    <Spinner
        android:id="@+id/updateLocation"
        android:background="@drawable/rounded_edit"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:autofillHints="Chọn thành phố"
        android:minHeight="48dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>
    <!-- Loại quán ăn -->
    <Spinner
        android:id="@+id/updateRoleRestaurant"
        android:background="@drawable/rounded_edit"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:autofillHints="Chọn loại quán"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </Spinner>


    <!-- Chọn ảnh -->

    <EditText
        android:id="@+id/updateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edit"
        android:ems="10"
        android:hint="@string/des"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral40" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/item_admin_background"
            android:text="@string/chooseImage"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nothingThere"
            android:textColorHint="@color/gray"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnChooseImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/item_admin_background"
            android:text="@string/chooseImage"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nothingThere"
            android:textColorHint="@color/gray"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnChooseImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/item_admin_background"
            android:text="@string/chooseImage"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textImage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nothingThere"
            android:textColorHint="@color/gray"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnChooseImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/item_admin_background"
            android:text="@string/chooseImage"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textImage3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nothingThere"
            android:textColorHint="@color/gray"
            android:background="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/deleteType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteRestaurant"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center_vertical"/>

    <!-- Nút hành động -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
