<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/dialog_background"
    android:gravity="center_horizontal">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/titleAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputTypeRestaurant"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <!-- Tên quán ăn -->
    <EditText
        android:id="@+id/addTypeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:background="@drawable/rounded_edit"
        android:hint="@string/inputTypeRestaurant"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral40" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_gravity="start"
        android:gravity="center_vertical"/>

    <!-- Nút hành động -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDismiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
